Remove width 100% to avoid image stretching in Chrome.

--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -40,7 +40,6 @@
 
 .nuxt-content img {
   max-height: 420px;
-  width: 100%;
 }
 
 .nuxt-content img.sm {
